--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,20 @@
 
     <color name="colorWhite">#ffffff</color>
     <color name="colorWhite99">#99ffffff</color>
+
+    <!--tab标签栏文字的颜色-->
+    <color name="colorTabText">#585858</color>
+    <!--正文文字颜色-->
+    <color name="colorContent">#ff333333</color>
+    <!--水波纹或5.0以下选择器颜色-->
+    <color name="tabBackground">#777D7D7D</color>
+    <!--item的水波纹颜色-->
+    <color name="itemBackground">#DD7D7D7D</color>
+    <!--item的5.0一下版本选择器颜色-->
+    <color name="itemLowBackground">#d9d9d9</color>
+
+    <!--页面背景的颜色-->
+    <color name="colorPageBg">#F1F3F4</color>
+    <!--首页item文字颜色-->
+    <color name="colorSubtitle">#999</color>
 </resources>
