1. 完善首页模块的功能 2. 新增分类标签页面、分类列表页面和文章详情页面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,7 @@
     <color name="colorPageBg">#F1F3F4</color>
     <!--首页item文字颜色-->
     <color name="colorSubtitle">#999</color>
+
+    <color name="color_45c1b5">#45c1b5</color>
+    <color name="color_049486">#049486</color>
 </resources>
