--- a/app/src/main/res/layout/adapter_photo_list.xml
+++ b/app/src/main/res/layout/adapter_photo_list.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                xmlns:tools="http://schemas.android.com/tools">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="4dp">
 
     <ImageView
         android:id="@+id/img_meizhi"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        tools:src="@drawable/ic_error"
-        android:contentDescription="@null"/>
+        android:layout_width="190dp"
+        android:layout_height="190dp"
+        android:contentDescription="@null"
+        tools:src="@drawable/ic_error"/>
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
