--- a/app/src/main/res/layout/fragment_article_tag.xml
+++ b/app/src/main/res/layout/fragment_article_tag.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:zhy="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:overScrollMode="never"
+    android:scrollbars="none">
 
     <com.zhy.view.flowlayout.TagFlowLayout
         android:id="@+id/tfl_article_tag"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
         zhy:max_select="1">
     </com.zhy.view.flowlayout.TagFlowLayout>
 
-</RelativeLayout>
+</ScrollView>
