--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,6 +13,9 @@
     <android.support.design.widget.NavigationView
         android:id="@+id/nv_main"
         android:layout_width="match_parent"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/nav_menu"
+        android:fitsSystemWindows="true"
         android:layout_height="match_parent"
         android:layout_gravity="start"/>
 
